add: swagger & readme added
